# diploma

./: .env.example  .gitignore  README.md  STATUS.md  pyproject.toml
data/results/: README.md
scripts/: run_all_experiments.sh  show_results.py
src/: baseline.py  data.py  erc_graph.py  erg_graph.py  evaluation.py  llm.py  main.py  prompts.py  run_erc.py  run_erg.py
tests/: test_data.py  test_graphs.py  test_smoke.py
